[package]
name = "namada_state"
description = "Namada ledger state"
resolver = "2"
authors.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
namada_core = {path = "../core", default-features = false}

arse-merkle-tree.workspace = true
ics23.workspace = true