[package]
name = "namada_state"
description = "Namada ledger state"
resolver = "2"
authors.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
namada_core = { path = "../core", default-features = false }
namada_gas = { path = "../gas" }
namada_merkle_tree = { path = "../merkle_tree" }
namada_parameters = { path = "../parameters" }
namada_storage = { path = "../storage" }
namada_trans_token = { path = "../trans_token" }
namada_tx = { path = "../tx" }

arse-merkle-tree.workspace = true
borsh.workspace = true
ics23.workspace = true
itertools.workspace = true
sha2.workspace = true
thiserror.workspace = true
tiny-keccak = {version = "2.0.2", features = ["keccak"]}
tracing.workspace = true
