[package]
name = "namada_storage"
description = "Namada ledger storage"
resolver = "2"
authors.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
namada_core = { path = "../core", default-features = false }

derivative.workspace = true
itertools.workspace = true
thiserror.workspace = true
