[package]
authors = ["Heliax AG <hello@heliax.dev>"]
description = "Namada tests"
edition = "2021"
license = "GPL-3.0"
name = "namada_tests"
resolver = "2"
version = "0.17.2"

[features]
default = ["abciplus", "wasm-runtime"]
mainnet = [
  "namada/mainnet",
]
abciplus = [
  "namada/abciplus",
  "namada/ibc-mocks",
  "namada_vp_prelude/abciplus",
  "namada_tx_prelude/abciplus",
]
wasm-runtime = ["namada/wasm-runtime"]

[dependencies]
namada = {path = "../shared", features = ["testing"]}
namada_core = {path = "../core", features = ["testing"]}
namada_test_utils = {path = "../test_utils"}
namada_vp_prelude = {path = "../vp_prelude"}
namada_tx_prelude = {path = "../tx_prelude"}
chrono = {version = "0.4.22", default-features = false, features = ["clock", "std"]}
concat-idents = "1.1.2"
ibc-relayer = {git = "https://github.com/heliaxdev/hermes.git", rev = "a4ad1355fc0b05908881854aa27221cb2b878ac5", default-features = false}
ibc-relayer-types = {git = "https://github.com/heliaxdev/hermes.git", rev = "a4ad1355fc0b05908881854aa27221cb2b878ac5", default-features = false}
prost = "0.11.6"
regex = "1.7.0"
serde_json = {version = "1.0.65"}
sha2 = "0.9.3"
test-log = {version = "0.2.7", default-features = false, features = ["trace"]}
tempfile = "3.2.0"
tokio = {version = "1.8.2", features = ["full"]}
tracing = "0.1.30"
tracing-subscriber = {version = "0.3.7", default-features = false, features = ["env-filter", "fmt"]}
derivative = "2.2.0"
rust_decimal = "=1.26.1"
rust_decimal_macros = "=1.26.1"

[dev-dependencies]
namada_apps = {path = "../apps", features = ["testing"]}
assert_cmd = "1.0.7"
borsh = "0.9.1"
color-eyre = "0.5.11"
data-encoding = "2.3.2"
# NOTE: enable "print" feature to see output from builds ran by e2e tests
escargot = {version = "0.5.7"} # , features = ["print"]}
expectrl = {version = "=0.7.0"}
eyre = "0.6.5"
file-serve = "0.2.0"
fs_extra = "1.2.0"
itertools = "0.10.0"
pretty_assertions = "0.7.2"
proptest = "1.2.0"
proptest-state-machine = "0.1.0"
rand = "0.8"
toml = "0.5.9"

# This is used to enable logging from tests
[package.metadata.cargo-udeps.ignore]
normal = ["test-log", "tracing-subscriber"]
