[package]
name = "namada_tests"
description = "Namada integration and E2E tests"
resolver = "2"
authors.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["abciplus", "wasm-runtime"]
mainnet = [
  "namada/mainnet",
]
abciplus = [
  "namada/abciplus",
  "namada/ibc-mocks",
  "namada_apps/abciplus",
  "namada_vp_prelude/abciplus",
  "namada_tx_prelude/abciplus",
  "namada_apps/abciplus"
]

wasm-runtime = ["namada/wasm-runtime"]

[dependencies]
namada = {path = "../shared", features = ["testing"]}
namada_core = {path = "../core", features = ["testing"]}
namada_test_utils = {path = "../test_utils"}
namada_vp_prelude = {path = "../vp_prelude"}
namada_tx_prelude = {path = "../tx_prelude"}
async-trait.workspace = true
chrono.workspace = true
clap.workspace = true
concat-idents.workspace = true
derivative.workspace = true
hyper = {version = "0.14.20", features = ["full"]}
lazy_static.workspace = true
num-traits.workspace = true
prost.workspace = true
regex.workspace = true
serde_json.workspace = true
serde.workspace = true
sha2.workspace = true
tempfile.workspace = true
tendermint-light-client.workspace = true
test-log.workspace = true
tokio = {workspace = true, features = ["full"]}
tracing-subscriber.workspace = true
tracing.workspace = true

[dev-dependencies]
namada_apps = {path = "../apps", features = ["testing"]}
assert_cmd.workspace = true
borsh.workspace = true
borsh-ext.workspace = true
color-eyre.workspace = true
data-encoding.workspace = true
# NOTE: enable "print" feature to see output from builds ran by e2e tests
escargot = {workspace = true} # , features = ["print"]}
expectrl.workspace = true
eyre.workspace = true
file-serve.workspace = true
fs_extra.workspace = true
itertools.workspace = true
once_cell.workspace = true
pretty_assertions.workspace = true
proptest.workspace = true
proptest-state-machine.workspace = true
rand.workspace = true
toml.workspace = true

# This is used to enable logging from tests
[package.metadata.cargo-udeps.ignore]
normal = ["test-log", "tracing-subscriber"]
