[package]
name = "namada_tx"
description = "Namada transaction construction types"
resolver = "2"
authors.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
namada_core = { path = "../core", default-features = false }
namada_gas = { path = "../gas" }
namada_storage = { path = "../storage" }

[build-dependencies]
tonic-build.workspace = true
