[package]
name = "namada_tx"
description = "Namada transaction construction types"
resolver = "2"
authors.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
namada_core = { path = "../core", default-features = false }
namada_gas = { path = "../gas" }

ark-bls12-381.workspace = true
borsh.workspace = true
data-encoding.workspace = true
masp_primitives.workspace = true
prost.workspace = true
prost-types.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[build-dependencies]
tonic-build.workspace = true
