[package]
name = "namada_tx_prelude"
description = "Namada transaction WASM prelude"
resolver = "2"
authors.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["abciplus"]
abciplus = [
  "namada_core/abciplus",
  "namada_proof_of_stake/abciplus",
  "namada_vm_env/abciplus",
]

[dependencies]
# branch = "murisi/namada-integration"
masp_primitives = { git = "https://github.com/anoma/masp", rev = "cfea8c95d3f73077ca3e25380fd27e5b46e828fd" }
namada_core = {path = "../core", default-features = false}
namada_macros = {path = "../macros"}
namada_proof_of_stake = {path = "../proof_of_stake", default-features = false}
namada_vm_env = {path = "../vm_env", default-features = false}
borsh = "0.9.0"
sha2 = "0.10.1"
thiserror = "1.0.38"
rust_decimal = "=1.26.1"
