[package]
authors = ["Heliax AG <hello@heliax.dev>"]
edition = "2021"
license = "GPL-3.0"
name = "namada_tx_prelude"
resolver = "2"
version = "0.17.2"

[features]
default = ["abciplus"]
abciplus = [
  "namada_core/abciplus",
  "namada_proof_of_stake/abciplus",
  "namada_vm_env/abciplus",
]

[dependencies]
masp_primitives = { git = "https://github.com/anoma/masp", rev = "9320c6b69b5d2e97134866871e960f0a31703813" }
namada_core = {path = "../core", default-features = false}
namada_macros = {path = "../macros"}
namada_proof_of_stake = {path = "../proof_of_stake", default-features = false}
namada_vm_env = {path = "../vm_env", default-features = false}
borsh = "0.9.0"
sha2 = "0.10.1"
thiserror = "1.0.38"
