[package]
authors = ["Heliax AG <hello@heliax.dev>"]
edition = "2021"
license = "GPL-3.0"
name = "namada_vm_env"
resolver = "2"
version = "0.17.2"

[features]
default = ["abciplus"]
abciplus = [
  "namada_core/abciplus",
]

[dependencies]
namada_core = {path = "../core", default-features = false}
borsh = "0.9.0"
#libmasp = { git = "https://github.com/anoma/masp", branch = "murisi/masp-incentive" }
masp_primitives = { git = "https://github.com/anoma/masp", rev = "64caae74dc71dd20e6e7fbf3d87770bffe5c4789" }
masp_proofs = { git = "https://github.com/anoma/masp", rev = "64caae74dc71dd20e6e7fbf3d87770bffe5c4789" }
hex = "0.4.3"
