[package]
authors = ["Heliax AG <hello@heliax.dev>"]
edition = "2021"
license = "GPL-3.0"
name = "namada_vm_env"
resolver = "2"
version = "0.17.2"

[features]
default = ["abciplus"]
abciplus = [
  "namada_core/abciplus",
]

[dependencies]
namada_core = {path = "../core", default-features = false}
borsh = "0.9.0"
# branch = "murisi/namada-integration"
masp_primitives = { git = "https://github.com/anoma/masp", rev = "cfea8c95d3f73077ca3e25380fd27e5b46e828fd" }
hex = "0.4.3"
