[package]
name = "namada_vm_env"
description = "Namada VM environment for WASM"
resolver = "2"
authors.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["abciplus"]
abciplus = [
  "namada_core/abciplus",
]

[dependencies]
namada_core = {path = "../core", default-features = false}
borsh.workspace = true
masp_primitives.workspace = true
