[package]
authors = ["Heliax AG <hello@heliax.dev>"]
edition = "2021"
license = "GPL-3.0"
name = "namada_vp_prelude"
resolver = "2"
version = "0.11.0"

[features]
default = []

[dependencies]
namada_core = {path = "../core"}
namada_macros = {path = "../macros"}
namada_proof_of_stake = {path = "../proof_of_stake"}
namada_vm_env = {path = "../vm_env"}
borsh = "0.9.0"
sha2 = "0.10.1"
thiserror = "1.0.30"
