[package]
name = "namada_vp_prelude"
description = "Namada validity predicate WASM prelude"
resolver = "2"
authors.workspace = true
edition.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["abciplus"]
abciplus = [
  "namada_core/abciplus",
  "namada_proof_of_stake/abciplus",
  "namada_vm_env/abciplus",
]

[dependencies]
namada_core = {path = "../core", default-features = false}
namada_macros = {path = "../macros"}
namada_proof_of_stake = {path = "../proof_of_stake", default-features = false}
namada_vm_env = {path = "../vm_env", default-features = false}
borsh.workspace = true
borsh-ext.workspace = true
sha2.workspace = true
thiserror.workspace = true
