[workspace]
resolver = "2"

members = [
    "wasm_source",
    "tx_template",
    "vp_template",
]

[patch.crates-io]
# TODO temp patch for <https://github.com/near/borsh-rs/issues/82>, <https://github.com/near/borsh-rs/issues/84> and more tba.
borsh = {git = "https://github.com/heliaxdev/borsh-rs.git", rev = "cd5223e5103c4f139e0c54cf8259b7ec5ec4073a"}
borsh-derive = {git = "https://github.com/heliaxdev/borsh-rs.git", rev = "cd5223e5103c4f139e0c54cf8259b7ec5ec4073a"}
borsh-derive-internal = {git = "https://github.com/heliaxdev/borsh-rs.git", rev = "cd5223e5103c4f139e0c54cf8259b7ec5ec4073a"}
borsh-schema-derive-internal = {git = "https://github.com/heliaxdev/borsh-rs.git", rev = "cd5223e5103c4f139e0c54cf8259b7ec5ec4073a"}
# patched to a commit on the `eth-bridge-integration+consensus-timeout` branch of our fork
tendermint = {git = "https://github.com/heliaxdev/tendermint-rs.git", rev = "2b007eeecb9e2b3d78a858ddf407328d83ac9ec3"}
tendermint-config = {git = "https://github.com/heliaxdev/tendermint-rs.git", rev = "2b007eeecb9e2b3d78a858ddf407328d83ac9ec3"}
tendermint-proto = {git = "https://github.com/heliaxdev/tendermint-rs.git", rev = "2b007eeecb9e2b3d78a858ddf407328d83ac9ec3"}
tendermint-rpc = {git = "https://github.com/heliaxdev/tendermint-rs.git", rev = "2b007eeecb9e2b3d78a858ddf407328d83ac9ec3"}
tendermint-testgen = {git = "https://github.com/heliaxdev/tendermint-rs.git", rev = "2b007eeecb9e2b3d78a858ddf407328d83ac9ec3"}
tendermint-light-client-verifier = {git = "https://github.com/heliaxdev/tendermint-rs.git", rev = "2b007eeecb9e2b3d78a858ddf407328d83ac9ec3"}

# patched to a commit on the `eth-bridge-integration` branch of our fork
ibc = {git = "https://github.com/heliaxdev/cosmos-ibc-rs.git", rev = "2a5ef5188c8d1e7e91260c3219796239c5053721"}
ibc-proto = {git = "https://github.com/heliaxdev/ibc-proto-rs.git", rev = "277f31a69583c12bf8d54a92b5541d8b738d9962"}

# patched to the yanked 1.2.0 until masp updates bitvec
funty = { git = "https://github.com/bitvecto-rs/funty/", rev = "7ef0d890fbcd8b3def1635ac1a877fc298488446" }

[profile.release]
# smaller and faster wasm (https://rustwasm.github.io/book/reference/code-size.html#compiling-with-link-time-optimizations-lto)
lto = true
# simply terminate on panics, no unwinding
panic = "abort"
# tell llvm to optimize for size (https://rustwasm.github.io/book/reference/code-size.html#tell-llvm-to-optimize-for-size-instead-of-speed)
opt-level = 'z'
